# datasketches-python

./: .asf.yaml  .gitignore  CMakeLists.txt  LICENSE  MANIFEST.in  NOTICE  README.md  pyproject.toml  requirements.txt  setup.py  tox.ini  version.cfg.in
.github/workflows/: build_wheels.yml  ci.yml  sphinx.yml
datasketches/: DensityWrapper.py  KernelFunction.py  PySerDe.py  TuplePolicy.py  TupleWrapper.py  __init__.py
docs/: README.md
docs/5.0.0/: search.html
docs/5.0.0/_sources/helper/: serde.rst.txt
docs/5.0.0/frequency/: frequent_items.html
docs/5.0.0/quantiles/: index.html
docs/5.0.1/: genindex.html
docs/5.0.1/_sources/: index.rst.txt
docs/5.0.1/_sources/distinct_counting/: cpc.rst.txt  theta.rst.txt
docs/5.0.1/_sources/helper/: jaccard.rst.txt
docs/5.0.1/distinct_counting/: cpc.html  theta.html  tuple.html
docs/5.0.2/: .buildinfo  searchindex.js
docs/5.0.2/_sources/helper/: kernel.rst.txt
docs/5.0.2/_sources/quantiles/: index.rst.txt  kll.rst.txt
docs/5.0.2/distinct_counting/: hyper_log_log.html
docs/5.0.2/helper/: jaccard.html
docs/5.1.0/: .buildinfo
docs/5.1.0/_sources/frequency/: index.rst.txt
docs/5.1.0/_sources/helper/: ks_test.rst.txt
docs/5.1.0/distinct_counting/: index.html
docs/5.1.0/helper/: serde.html
docs/5.1.0/sampling/: ebpps.html  index.html
docs/5.1.1/: .buildinfo  searchindex.js
docs/5.1.1/_sources/distinct_counting/: tuple.rst.txt
docs/5.1.1/distinct_counting/: cpc.html  hyper_log_log.html  index.html  theta.html  tuple.html
docs/5.1.1/frequency/: index.html
docs/5.1.1/helper/: ks_test.html  serde.html
docs/5.1.1/quantiles/: index.html  quantiles_depr.html
docs/5.1.1/sampling/: ebpps.html  index.html  varopt.html
docs/5.1.1/vector/: index.html
docs/main/: .buildinfo  count_min_sketch.html  cpc.html  density_sketch.html  ebpps.html  frequent_items.html  genindex.html  hyper_log_log.html  index.html  jaccard.html  kernel.html  kll.html  ks_test.html  objects.inv  quantiles_depr.html  req.html  search.html  searchindex.js  serde.html  theta.html  tuple.html  tuple_policy.html  varopt.html
docs/main/_sources/: count_min_sketch.rst.txt  density_sketch.rst.txt  frequent_items.rst.txt  hyper_log_log.rst.txt  req.rst.txt  tuple.rst.txt
docs/main/_sources/sampling/: varopt.rst.txt
docs/main/distinct_counting/: cpc.html  hyper_log_log.html  index.html  theta.html  tuple.html
docs/main/frequency/: count_min_sketch.html  frequent_items.html  index.html
docs/main/helper/: index.html  jaccard.html  kernel.html  ks_test.html  serde.html  tuple_policy.html
docs/main/quantiles/: index.html  kll.html  quantiles_depr.html  req.html  tdigest.html
docs/main/sampling/: ebpps.html  index.html  varopt.html
docs/main/vector/: density_sketch.html  index.html
docs/source/: conf.py  count_min_sketch.rst  cpc.rst  density_sketch.rst  ebpps.rst  frequent_items.rst  hyper_log_log.rst  index.rst  kll.rst  quantiles_depr.rst  req.rst  theta.rst  tuple.rst  varopt.rst
docs/source/distinct_counting/: cpc.rst  index.rst
docs/source/frequency/: index.rst
docs/source/helper/: index.rst  tuple_policy.rst
docs/source/quantiles/: index.rst  kll.rst  quantiles_depr.rst  req.rst  tdigest.rst
docs/source/sampling/: index.rst  index.rst~
docs/source/vector/: index.rst
include/: kernel_function.hpp  py_object_lt.hpp  py_object_ostream.hpp  py_serde.hpp  quantile_conditional.hpp  tuple_policy.hpp
jupyter/: CPCSketch.ipynb  FrequentItemsSketch.ipynb  KLLSketch.ipynb  ThetaSketchNotebook.ipynb
jupyter/comparison-to-datasketch/: README.md  api-comparison.ipynb  api-differences.ipynb  cardinality_error_experiment.py  single-sketch-accuracy.ipynb  space-comparison.ipynb  update-time-comparison.ipynb  utils.py
jupyter/density_sketch/: 1-introduction-kde-coreset.ipynb  2-density-sketch-visualization.ipynb  coreset_naive_bayes.ipynb  kernel_density.py  naive_bayes_classifier.py
python-docs-venv/: pyvenv.cfg
src/: bloom_wrapper.cpp  count_wrapper.cpp  cpc_wrapper.cpp  datasketches.cpp  density_wrapper.cpp  ebpps_wrapper.cpp  fi_wrapper.cpp  hll_wrapper.cpp  kll_wrapper.cpp  ks_wrapper.cpp  py_serde.cpp  quantiles_wrapper.cpp  req_wrapper.cpp  tdigest_wrapper.cpp  theta_wrapper.cpp  tuple_wrapper.cpp  vector_of_kll.cpp  vo_wrapper.cpp
tests/: count_min_test.py  cpc_test.py  density_test.py  ebpps_test.py  fi_test.py  hll_test.py  kll_test.py  quantiles_test.py  req_test.py  tdigest_test.py  theta_test.py  tuple_test.py  vector_of_kll_test.py  vo_test.py
