# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

[build-system]
requires = ["wheel",
            "setuptools >= 30.3.0",
            "numpy",
            "nanobind >= 1.6"]
build-backend = "setuptools.build_meta"

[tool.cibuildwheel]
build-verbosity = 0  # options: 1, 2, or 3
skip = ["cp36-*", "cp37-*", "cp38-*", "pp*", "*-win32"]

[tool.cibuildwheel.windows]
archs = ["auto64"]

[tool.cibuildwheel.linux]
archs = ["auto", "aarch64"]

[tool.cibuildwheel.macos]
archs = ["x86_64", "arm64"]
